fix: className and z-index

--- a/assets/index.less
+++ b/assets/index.less
@@ -22,6 +22,7 @@
 .@{prefixCls} {
   display: inline-flex;
   position: relative;
+
   &-img {
     width: 100%;
     height: auto;
@@ -183,7 +184,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      z-index: 1;
+      z-index: @zindex-preview-mask + 1;
       pointer-events: auto;
       color: @text-color;
       &-disabled {
@@ -211,7 +212,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      z-index: 1;
+      z-index: @zindex-preview-mask + 1;
       pointer-events: auto;
       color: @text-color;
       &-disabled {
